[package]
name = "suseconnectr"
version = "0.1.0"
authors = ["Jan Zerebecki <jan.suse@zerebecki.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.13"
tokio = { version = "1.4.0", features = ["macros", "rt-multi-thread"] }
clap = "2.33.3"
reqwest = "0.11.2"
serde_json = "1.0.64"
sxd-xpath = "0.4.2"
sxd-document = "0.3.2"
